# cc

./: DOCS.md  README.md  SAMPLE-C.md  SAMPLE-S.md  pyproject.toml  setup.sh
.claude/skills/tdd-backend/: SKILL.md
.pi/skills/tdd-backend/: deep-modules-backend.md
.pi/skills/tdd-frontend/: SKILL.md  refactoring-frontend.md
backend/: CLAUDE.md
docs/: prd-ccskills-refactor.md
docs/plans/: ccskills-refactor.md
docs/superpowers/plans/: 2026-04-11-pi-installer.md
docs/superpowers/specs/: 2026-04-11-pi-installer-design.md
interrogate/: SKILL.md
plan-from-prd/: SKILL.md
src/cc/: cli.py  skills_cli.py  template_cli.py  templates_cli.py
src/ccskills/: cli.py  installer.py
src/skills/: cli.py  installer.py
src/skills/interrogate/: SKILL.md
src/skills/issues-from-plan/: SKILL.md
src/skills/issues-from-prd/: SKILL.md
src/skills/plan-from-prd/: SKILL.md
src/skills/prd-from-draft/: SKILL.md
src/skills/progress/: SKILL.md
src/skills/tdd-backend/: SKILL.md  interface-design-backend.md  refactoring-backend.md
src/skills/tdd-frontend/: interface-design-frontend.md
src/skills/write-prd/: SKILL.md
src/templates/: cli.py  installer.py
src/templates/claw-build/: CLAUDE.md  TEMPLATE.md
src/templates/claw-plan/: CLAUDE.md  TEMPLATE.md
src/templates/claw-prd/: CLAUDE.md  TEMPLATE.md
src/templates/claw-review/: CLAUDE.md  TEMPLATE.md
tdd-backend/: backend-mocking.md  backend-test.md
tdd-frontend/: SKILL.md  deep-modules-frontend.md
tests/: test_cli.py  test_installer.py  test_templates.py
write-prd/: SKILL.md
(+8 files in other folders)
