[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "skills"
version = "0.1.0"
description = "Install Claude Code skills into your project"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
skills = "skills.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
