[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-skills"
version = "0.1.0"
description = "Install Claude Code skills into your project"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
skills = "skills.cli:main"
claude-md = "templates.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"skills" = ["**/*.md"]
"templates" = ["**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
